--- a/css/style.css
+++ b/css/style.css
@@ -1205,21 +1205,21 @@ ul.sorting-parameters{
 .found-hotel-ratings{
   margin-top: 10px;
   margin-bottom: -10px;
- 
+  display: flex;
+  flex-direction: column;
 }
-.found-hotel-ratings p{
+.found-hotel-ratings p:nth-child(2){
   display: inline-block;
   padding: 5px 16px;
   background-color: #f2f2f2;
   margin: 0;
   margin-top: 40px;
 }
-.found-hotel-ratings b{
-  display: inline-block;
+.found-hotel-ratings p:first-child{
   font-size: 0;
 }
 
-b.four-stars::before{
+p.four-stars:first-child::before{
   content: "";
 
   background-image: url("../img/star.svg");
