--- a/css/style.css
+++ b/css/style.css
@@ -1215,11 +1215,8 @@ ul.sorting-parameters{
   margin: 0;
   margin-top: 40px;
 }
-.found-hotel-ratings p:first-child{
-  font-size: 0;
-}
 
-p.four-stars:first-child::before{
+p.four-stars{
   content: "";
 
   background-image: url("../img/star.svg");
@@ -1235,7 +1232,7 @@ p.four-stars:first-child::before{
   bottom: auto;
   left: auto;
 }
-p.three-stars:first-child::before{
+p.three-stars{
   content: "";
 
   background-image: url("../img/star.svg");
@@ -1249,7 +1246,7 @@ p.three-stars:first-child::before{
   top: 28px;
   right: 0;
 }
-p.two-stars:first-child::before{
+p.two-stars{
   content: "";
 
   background-image: url("../img/star.svg");
