--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ a {
 }
 .main-navigation a.current-page {
   cursor:pointer;
-  color: #b7b7b7;
+  color: #766357;
 }
 
 .main-navigation a {
@@ -258,8 +258,8 @@ div.reasons-info.right {
 }
 
 .search-results p {
-  font-size: 10.5px;
-  line-height: 17.5px;
+  font-size: 12px;
+  line-height: 18px;
 }
 
 .search-results ul {
@@ -269,12 +269,13 @@ div.reasons-info.right {
 }
 .sorting-parameters a {
   cursor:pointer;
-  font-size: 10.5px;
-  line-height: 17.5px;
+  font-size: 12px;
+  line-height: 18px;
   color: rgba(0, 0, 0, 0.3);
 
   border-bottom-color: #81b3d2;
   border-bottom-style: dotted;
+  border-bottom-width: 1px;
 }
 
 .sorting-parameters a:hover,
@@ -323,6 +324,8 @@ div.reasons-info.right {
 
   background-color: #81b3d2;
   padding: 3px 17px;
+  padding-bottom: 4px;
+
   cursor:pointer;
 }
 
@@ -340,7 +343,7 @@ div.reasons-info.right {
   font-size: 14px;
   font-weight: bold;
   line-height: 21px;
-  padding: 3px 17px;
+  padding: 3px 18px;
   cursor:pointer;
   
 }
@@ -384,22 +387,33 @@ div.reasons-info.right {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 
-
 }
-.main-navigation li:nth-child(3) {
-  margin-left: auto;
+.main-navigation li{
+  width: 99px;
 }
 
 .main-navigation a {
   cursor:pointer;
   display: block;
-  width: 239px;
 
-  padding-top: 14px;
-  padding-bottom: 16px;
-  text-align: center;
+  margin-top: 14px;
+  margin-bottom: 16px;  
 }
-
+.main-navigation li:first-of-type,
+.main-navigation li:nth-of-type(2){
+  text-align: left;
+  margin-left: 73px;
+  margin-right: 70px;
+}
+.main-navigation li:nth-of-type(3),
+.main-navigation li:last-of-type{
+  text-align: right;
+  margin-right: 73px;
+  margin-left: 70px;
+}
+.main-navigation li:nth-child(3) {
+  margin-left: auto;
+}
 .main-header-logo {
   position: absolute;
   z-index: 2;
@@ -615,7 +629,7 @@ div.reasons-info.left img {
   background-color: #ffffff;
 
   padding-top: 48px;
-  padding-bottom: 132px;
+  padding-bottom: 138px;
   margin: 0;
 
   display: -webkit-box;
@@ -849,14 +863,15 @@ div.reasons-info.left img {
   font-size: 21px;
 
   margin-left: 132px;
-  margin-right: 36px;
+  margin-right: 34px;
+  margin-top: -6px;
 }
 .footer-copyright {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 
-  margin-right: 101px;
+  margin-right: 96px;
 }
 .footer-copyright b {
   display: inline-block;
@@ -917,7 +932,7 @@ div.reasons-info.left img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding-top: 28px;
+  padding-top: 25px;
   padding-left: 60px;
   padding-right: 73px;
 }
@@ -1105,7 +1120,7 @@ div.reasons-info.left img {
 }
 .search-items {
   width: 528px;
-  padding-top:26px;
+  padding-top:29px;
   padding-bottom:28px;
 
   display: -webkit-box;
@@ -1155,8 +1170,8 @@ ul.sorting-parameters{
 .inner-item-hotel {
   width: 1056px;
   margin: 0 auto;
-  padding-top: 20px;
-  padding-bottom: 14px;  
+  padding-top: 21px;
+  padding-bottom: 12px;  
 
   display: -webkit-box;  
 
@@ -1204,16 +1219,16 @@ ul.sorting-parameters{
 }
 .found-hotel-ratings{
   margin-top: 10px;
-  margin-bottom: -10px;
+  margin-bottom: -2px;
   display: flex;
   flex-direction: column;
 }
 .found-hotel-ratings p:nth-child(2){
   display: inline-block;
-  padding: 5px 16px;
+  padding: 3px 13px;
   background-color: #f2f2f2;
   margin: 0;
-  margin-top: 40px;
+  margin-top: 42px;
 }
 
 p.four-stars{
