--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@ body {
 
   background-color: #f2f2f2;
   position: relative;
-
 }
 
 a {
@@ -28,12 +27,12 @@ a {
   list-style: none;
 }
 .main-navigation a.current-page {
-  cursor:pointer;
+  cursor: pointer;
   color: #766357;
 }
 
 .main-navigation a {
-  cursor:pointer;
+  cursor: pointer;
   color: #000000;
 }
 .main-navigation a:hover,
@@ -105,7 +104,7 @@ div.reasons-info.right {
   background-color: #766357;
   border: none;
 
-  cursor:pointer;
+  cursor: pointer;
 }
 
 .travel-search-button:hover,
@@ -121,8 +120,22 @@ div.reasons-info.right {
 .search-form fieldset {
   border: none;
   padding-top: 40px;
+  transition: 0.45s;
+  transition-timing-function: ease-in-out;
 }
 
+.search-form-hidden {
+  max-height: 87px;
+  overflow: hidden;
+  transition: 0.4s;
+}
+
+.search-form-hidden fieldset {
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.45s;
+  transition-timing-function: ease-in-out;
+}
 .search-form label {
   font-weight: bold;
 }
@@ -190,7 +203,7 @@ div.reasons-info.right {
 }
 
 .main-footer a {
-  cursor:pointer;
+  cursor: pointer;
   color: #000000;
 }
 .main-footer ul {
@@ -213,7 +226,6 @@ div.reasons-info.right {
   background-size: cover;
   background-position-y: center;
   background-repeat: no-repeat;
- 
 }
 
 .search-filters fieldset {
@@ -232,7 +244,7 @@ div.reasons-info.right {
 
 .filter-button {
   display: block;
-  width:135px;
+  width: 135px;
   margin-left: 100px;
   padding: 6px 35px;
 
@@ -246,7 +258,7 @@ div.reasons-info.right {
 
   background-color: transparent;
 
-  cursor:pointer;
+  cursor: pointer;
 }
 .filter-button:hover,
 .filter-button:focus {
@@ -271,7 +283,7 @@ div.reasons-info.right {
   list-style: none;
 }
 .sorting-parameters a {
-  cursor:pointer;
+  cursor: pointer;
   font-size: 12px;
   line-height: 18px;
   color: rgba(0, 0, 0, 0.3);
@@ -331,7 +343,7 @@ div.reasons-info.right {
   padding: 3px 17px;
   padding-bottom: 4px;
 
-  cursor:pointer;
+  cursor: pointer;
 }
 
 .details-button:hover,
@@ -350,7 +362,7 @@ div.reasons-info.right {
   line-height: 21px;
   padding: 3px 17px;
   padding-top: 4px;
-  cursor:pointer;
+  cursor: pointer;
   vertical-align: middle;
 }
 .reserve-button:hover,
@@ -374,7 +386,6 @@ div.reasons-info.right {
   width: 1200px;
   width: 1200px;
   margin: 0 auto;
-
 }
 
 .main-navigation {
@@ -388,31 +399,30 @@ div.reasons-info.right {
 
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-
+  flex-wrap: wrap;
 }
-.main-navigation li{
+.main-navigation li {
   width: 99px;
 }
 
 .main-navigation a {
-  cursor:pointer;
+  cursor: pointer;
   display: block;
 
   margin-top: 14px;
-  margin-bottom: 16px;  
+  margin-bottom: 16px;
 }
 .main-navigation li:first-of-type,
-.main-navigation li:nth-of-type(2){
+.main-navigation li:nth-of-type(2) {
   text-align: left;
   margin-left: 73px;
   margin-right: 70px;
 }
 .main-navigation li:nth-of-type(3),
-.main-navigation li:last-of-type{
+.main-navigation li:last-of-type {
   text-align: right;
   margin-right: 73px;
   margin-left: 70px;
@@ -433,9 +443,8 @@ div.reasons-info.right {
 
   background-color: #ffffff;
   -webkit-box-shadow: 0px 0px 10px 0px #000000;
-          box-shadow: 0px 0px 10px 0px #000000;
+  box-shadow: 0px 0px 10px 0px #000000;
 }
-
 
 .index-main-pic {
   margin: 0;
@@ -481,11 +490,11 @@ div.reasons-info.right {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 
   position: relative;
   top: -10px;
@@ -519,11 +528,11 @@ div.reasons-info.right {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 
   margin-top: 47px;
   margin-bottom: 60px;
@@ -569,7 +578,7 @@ div.reasons-info.left img {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
 
   padding-top: 61px;
   padding-bottom: 68px;
@@ -618,8 +627,8 @@ div.reasons-info.right {
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: reverse;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse;
+  -ms-flex-direction: row-reverse;
+  flex-direction: row-reverse;
 }
 div.reasons-info.right img {
   margin-right: auto;
@@ -630,7 +639,7 @@ div.reasons-info.right img {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
 }
 .reasons-container .reasons-description {
   display: inline-block;
@@ -655,13 +664,13 @@ div.reasons-info.right img {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 
   position: relative;
   z-index: 1;
@@ -700,21 +709,21 @@ div.reasons-info.right img {
   padding-bottom: 30px;
 
   vertical-align: middle;
-  cursor:pointer;
+  cursor: pointer;
 }
 .search-parameter {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  
+
   -webkit-box-pack: justify;
-  
-      -ms-flex-pack: justify;
-  
-          justify-content: space-between;
+
+  -ms-flex-pack: justify;
+
+  justify-content: space-between;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 
   margin-left: 45px;
   margin-right: 43px;
@@ -724,7 +733,7 @@ div.reasons-info.right img {
 }
 .search-parameter input {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   padding: 6px;
   padding-left: 8px;
 }
@@ -746,17 +755,17 @@ div.reasons-info.right img {
   background: none;
   border: 1px solid transparent;
 }
-.calendar path{
+.calendar path {
   fill: #d4d4d4;
 }
 
 .calendar:hover path,
-.calendar:focus path{
- fill: #000000;
+.calendar:focus path {
+  fill: #000000;
 }
 
-.calendar:active path{
- fill: #81b3d2;
+.calendar:active path {
+  fill: #81b3d2;
 }
 
 .parameter-wrap {
@@ -765,18 +774,18 @@ div.reasons-info.right img {
   display: flex;
   margin: 0;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
-.parameter-wrap .quantity{
+.parameter-wrap .quantity {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   width: 40px;
   text-align: center;
 }
 
 .reduce,
-.add{
-  width:39px;
+.add {
+  width: 39px;
   position: relative;
   cursor: pointer;
   font-size: 0;
@@ -789,7 +798,7 @@ div.reasons-info.right img {
 .reduce::before {
   position: absolute;
   content: "";
-  left:15px;
+  left: 15px;
   right: auto;
   top: 18px;
   bottom: auto;
@@ -797,14 +806,14 @@ div.reasons-info.right img {
   width: 12px;
   height: 3px;
 
-  background-color: #a9a9a9;  
+  background-color: #a9a9a9;
 }
 
 .add::before,
 .add::after {
   position: absolute;
   content: "";
-  top:18px;
+  top: 18px;
   left: 13px;
   bottom: auto;
   right: auto;
@@ -812,25 +821,25 @@ div.reasons-info.right img {
   width: 13px;
   height: 3px;
 
-  background-color: #a9a9a9;  
+  background-color: #a9a9a9;
 }
 .add::before {
   -webkit-transform: rotate(90deg);
-      -ms-transform: rotate(90deg);
-          transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg);
 }
 .reduce:hover::before,
 .reduce:focus::before,
 .add:hover::before,
 .add:focus::before,
 .add:hover::after,
-.add:focus::after{
-  background-color: #000000;  
+.add:focus::after {
+  background-color: #000000;
 }
 .reduce:active::before,
 .add:active::before,
-.add:active::after{
-  background-color: #81b3d2;  
+.add:active::after {
+  background-color: #81b3d2;
 }
 
 .search-submit {
@@ -855,16 +864,13 @@ div.reasons-info.right img {
 
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
- 
-  
+  -ms-flex-align: center;
+  align-items: center;
 }
-.index-footer{
-  
+.index-footer {
   background-color: rgba(255, 255, 255, 0.9);
 
   position: relative;
@@ -906,17 +912,17 @@ div.reasons-info.right img {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 
   width: 46px;
   height: 48px;
 
   background-color: #81b3d2;
-  cursor:pointer;
+  cursor: pointer;
 }
 .social-button:hover,
 .social-button:focus {
@@ -941,12 +947,11 @@ div.reasons-info.right img {
   display: -ms-flexbox;
   display: flex;
 
-
   justify-content: center;
   width: 33.33%;
 }
-.filter ul{
-  margin:0;
+.filter ul {
+  margin: 0;
   padding: 0;
 }
 
@@ -966,12 +971,11 @@ div.reasons-info.right img {
   margin-left: 14px;
 }
 
-.filter legend{
+.filter legend {
   margin-bottom: 20px;
 }
 
-.filter-parameter{
- 
+.filter-parameter {
   margin-bottom: 25px;
   padding-left: 40px;
 }
@@ -980,9 +984,9 @@ div.reasons-info.right img {
 
   cursor: pointer;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 .filter-input + label::before {
   content: "";
@@ -1018,9 +1022,9 @@ div.reasons-info.right img {
 .filter div.price-controls {
   position: relative;
   height: 36px;
-  width:317px;
+  width: 317px;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin-bottom: 20px;
   font-size: 0;
 
@@ -1038,8 +1042,8 @@ div.reasons-info.right img {
 
   background: #ffffff;
   -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 .price-controls label {
@@ -1051,7 +1055,7 @@ div.reasons-info.right img {
 
   cursor: pointer;
 }
-.price-controls .min-price{
+.price-controls .min-price {
   padding-left: 65px;
 }
 .price-controls .max-price {
@@ -1079,11 +1083,11 @@ div.reasons-info.right img {
 
   background: rgba(255, 255, 255, 0.3);
 }
-.scale{
+.scale {
   margin-left: 15px;
   padding-right: 75px;
 }
-.filter .range-wrapper{
+.filter .range-wrapper {
   margin-left: 309px;
 }
 
@@ -1104,18 +1108,18 @@ div.reasons-info.right img {
   border: 8px solid #ffffff;
   border-radius: 50%;
   -webkit-box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
-          box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+  box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
   cursor: pointer;
 }
 .range-toggle:hover {
   background: #1c4f80;
 }
- .range-toggle-min {
+.range-toggle-min {
   left: 0;
 }
 .range-toggle-max {
   left: 268px;
-} 
+}
 
 .search-container {
   width: 1056px;
@@ -1128,11 +1132,11 @@ div.reasons-info.right img {
 
   display: flex;
   -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+  -ms-flex-align: baseline;
+  align-items: baseline;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 .search-container h2,
 .search-container p,
@@ -1142,8 +1146,8 @@ div.reasons-info.right img {
 }
 .search-items {
   width: 528px;
-  padding-top:27px;
-  padding-bottom:28px;
+  padding-top: 27px;
+  padding-bottom: 28px;
 
   display: -webkit-box;
 
@@ -1151,38 +1155,36 @@ div.reasons-info.right img {
 
   display: flex;
   -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+  -ms-flex-align: baseline;
+  align-items: baseline;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between; 
-  
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
-.search-items ul{
+.search-items ul {
   margin: 0;
   padding: 0;
 }
-ul.sorting-parameters{
+ul.sorting-parameters {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between; 
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 
   width: 231px;
   margin-right: 15px;
 }
 
-
 .found-hotel {
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   border-bottom: 1px solid #e5e5e5;
 }
 
@@ -1193,23 +1195,23 @@ ul.sorting-parameters{
   width: 1056px;
   margin: 0 auto;
   padding-top: 21px;
-  padding-bottom: 13px;  
+  padding-bottom: 13px;
 
-  display: -webkit-box;  
+  display: -webkit-box;
 
-  display: -ms-flexbox;  
+  display: -ms-flexbox;
 
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 
-  position: relative
+  position: relative;
 }
 .hotel-wrapper {
   width: 528px;
@@ -1221,7 +1223,7 @@ ul.sorting-parameters{
 
   display: flex;
 }
-.hotel-button-wrapper{
+.hotel-button-wrapper {
   display: flex;
   width: 258px;
   justify-content: space-between;
@@ -1230,24 +1232,24 @@ ul.sorting-parameters{
   width: 258px;
   margin-left: 30px;
 }
-.found-hotel-information h3{
+.found-hotel-information h3 {
   padding: 0;
   margin-top: 4px;
   margin-bottom: 3px;
 }
-.found-hotel-information span{
+.found-hotel-information span {
   display: inline-block;
-  width: 50%; 
+  width: 50%;
 
   vertical-align: middle;
 }
-.found-hotel-ratings{
+.found-hotel-ratings {
   margin-top: 10px;
   margin-bottom: -2px;
   display: flex;
   flex-direction: column;
 }
-.found-hotel-ratings p:nth-child(2){
+.found-hotel-ratings p:nth-child(2) {
   display: inline-block;
   vertical-align: middle;
 
@@ -1257,7 +1259,7 @@ ul.sorting-parameters{
   margin-top: 42px;
 }
 
-p.four-stars{
+p.four-stars {
   content: "";
 
   background-image: url("../img/star.svg");
@@ -1265,7 +1267,7 @@ p.four-stars{
   background-size: 21px;
   width: 90px;
   height: 19px;
-  
+
   font-size: 0;
   position: absolute;
 
@@ -1274,7 +1276,7 @@ p.four-stars{
   bottom: auto;
   left: auto;
 }
-p.three-stars{
+p.three-stars {
   content: "";
 
   background-image: url("../img/star.svg");
@@ -1282,78 +1284,78 @@ p.three-stars{
   background-size: 21px;
   width: 65px;
   height: 19px;
-  
+
   font-size: 0;
   position: absolute;
 
   top: 28px;
   right: 0;
 }
-p.two-stars{
+p.two-stars {
   content: "";
 
   background-image: url("../img/star.svg");
   background-size: 21px;
   width: 42px;
   height: 19px;
-  
+
   font-size: 0;
   position: absolute;
 
   top: 28px;
   right: 0;
 }
-.sorting-order{
+.sorting-order {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   position: relative;
-    
+
   height: 10px;
   width: 40px;
 }
-.sorting-order a{
+.sorting-order a {
   font-size: 0;
 }
-.sorting-order a.order-descending{
-  cursor:pointer;
+.sorting-order a.order-descending {
+  cursor: pointer;
   position: absolute;
   bottom: 0;
-  left:0;
-  
+  left: 0;
+
   border: 8px solid transparent;
   border-bottom-color: #cacaca;
 }
-.sorting-order a.order-ascending{
-  cursor:pointer;
+.sorting-order a.order-ascending {
+  cursor: pointer;
   position: absolute;
   top: 0;
-  right:0;
-  
+  right: 0;
+
   border: 8px solid transparent;
   border-top-color: #cacaca;
 }
 .sorting-order a.order-descending:hover,
-.sorting-order a.order-descending:focus{
+.sorting-order a.order-descending:focus {
   border: 8px solid transparent;
-  border-bottom-color: #231f20;  
+  border-bottom-color: #231f20;
 }
 .sorting-order a.order-ascending:hover,
-.sorting-order a.order-ascending:focus{
+.sorting-order a.order-ascending:focus {
   border: 8px solid transparent;
-  border-top-color: #231f20;  
+  border-top-color: #231f20;
 }
 
-.sorting-order a.order-descending:active{
+.sorting-order a.order-descending:active {
   border: 8px solid transparent;
-  border-bottom-color: #81b3d2;  
+  border-bottom-color: #81b3d2;
 }
 
-.sorting-order a.order-ascending:active{
+.sorting-order a.order-ascending:active {
   border: 8px solid transparent;
-  border-top-color: #81b3d2;  
+  border-top-color: #81b3d2;
 }
 
 img {
@@ -1375,7 +1377,7 @@ input[type="radio"].visually-hidden {
 
   -webkit-clip-path: inset(100%);
 
-          clip-path: inset(100%);
+  clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
