--- a/css/style.css
+++ b/css/style.css
@@ -275,6 +275,8 @@ div.reasons-info.right {
 .search-results p {
   font-size: 12px;
   line-height: 18px;
+  margin: 0;
+  /* height: 90px; */
 }
 
 .search-results ul {
@@ -323,12 +325,9 @@ div.reasons-info.right {
 .found-hotel-information b {
   display: inline-block;
   vertical-align: middle;
-
   width: 230px;
   line-height: 21px;
   font-weight: normal;
-
-  margin-bottom: 14px;
 }
 
 .details-button {
@@ -379,7 +378,7 @@ div.reasons-info.right {
   text-align: center;
   color: #666666;
 }
-/* Сеточные стили */
+
 .main-header {
   position: relative;
   width: 1200px;
@@ -878,17 +877,7 @@ div.reasons-info.right img {
   right: 0;
   /* bottom: -43px; */
 }
-.sedona-hashtag {
-  font-weight: bold;
-  font-size: 21px;
 
-  margin-top: -6px;
-
-  width: 33.33%;
-  display: inline-block;
-  text-align: center;
-  vertical-align: middle;
-}
 .footer-copyright {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1193,24 +1182,21 @@ ul.sorting-parameters {
 .inner-item-hotel {
   width: 1056px;
   margin: 0 auto;
-  padding-top: 20px;
-  padding-bottom: 12px;
-
+  /* padding-top: 20px; */
+  /* padding-bottom: 12px; */
   display: -webkit-box;
-
   display: -ms-flexbox;
-
   display: flex;
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center;
+  align-items: inherit;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
-  justify-content: space-between;
+  justify-content: flex-start;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-
   position: relative;
+  padding: 30px 0;
 }
 .hotel-wrapper {
   width: 528px;
@@ -1226,18 +1212,20 @@ ul.sorting-parameters {
   display: flex;
   width: 258px;
   justify-content: space-between;
-  margin-top: 1px;
-
+  /* margin-top: 1px; */
 }
 .found-hotel-information {
   width: 258px;
   margin-left: 30px;
-  margin-top: 2px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .found-hotel-information h3 {
   padding: 0;
-  margin-top: 4px;
-  margin-bottom: 3px;
+  margin-top: -3px;
+  margin-bottom: -10px;
+  /* margin: 0; */
 }
 .found-hotel-information span {
   display: inline-block;
@@ -1246,37 +1234,35 @@ ul.sorting-parameters {
   vertical-align: middle;
 }
 .found-hotel-ratings {
-  margin-top: 10px;
-  margin-bottom: -2px;
+  /* margin-top: 10px; */
+  /* margin-bottom: -2px; */
   display: flex;
   flex-direction: column;
+  margin-left: auto;
 }
 .found-hotel-ratings p:nth-child(2) {
   display: inline-block;
   vertical-align: middle;
-
   padding: 3px 13px;
   background-color: #f2f2f2;
   margin: 0;
-  margin-top: 46px;
+  margin-top: auto;
 }
 
 p.four-stars {
   content: "";
-
   background-image: url("../img/star.svg");
   background-repeat: round;
   background-size: 21px;
   width: 90px;
   height: 19px;
-
   font-size: 0;
   position: absolute;
-
   top: 28px;
-  right: 0;
+  right: -3px;
   bottom: auto;
   left: auto;
+  /* margin-left: auto; */
 }
 p.three-stars {
   content: "";
@@ -1363,7 +1349,13 @@ p.two-stars {
 img {
   max-width: 100%;
 }
+.found-hotel-image a {
+  display: block;
+}
 
+.found-hotel-image img {
+  display: block;
+}
 .visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
 input[type="radio"].visually-hidden {
@@ -1382,4 +1374,14 @@ input[type="radio"].visually-hidden {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+.hashtag-wrapper {
+  width: 33.33%;
+  text-align: center;
+}
+
+.sedona-hashtag {
+  font-weight: bold;
+  font-size: 21px;
+  text-align: center;
 }
